IC-Test/objects/F2S_Opportunity_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date snapshot is for</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Est_Sales__c</fullName>
        <label>Est Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <label>Opp Role ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>Opp User ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>F2S Opportunity Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Count__c</columns>
        <columns>Date__c</columns>
        <columns>Est_Sales__c</columns>
        <columns>Role_ID__c</columns>
        <columns>User_ID__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>F2S Opportunity Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>F2S Opportunity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>